Remove database connection from build process

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "db:clear-projects": "npx tsx scripts/clear-projects.ts",
     "deploy": "./scripts/deploy.sh",
     "postinstall": "npx prisma generate",
-    "vercel-build": "npx prisma generate && npx prisma migrate deploy && next build"
+    "vercel-build": "npx prisma generate && next build"
   },
   "dependencies": {
     "next": "14.0.4",
