--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npx prisma generate && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "db:migrate": "npx prisma migrate dev",
@@ -15,8 +15,8 @@
     "db:seed:prod": "npx tsx scripts/seed-production.ts",
     "db:clear-projects": "npx tsx scripts/clear-projects.ts",
     "deploy": "./scripts/deploy.sh",
-    "postinstall": "npx prisma generate",
-    "vercel-build": "npx prisma generate && next build"
+    "postinstall": "echo 'Skipping Prisma generate in postinstall'",
+    "vercel-build": "next build"
   },
   "dependencies": {
     "next": "14.0.4",
