--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@prisma/client": "^5.7.1",
     "autoprefixer": "^10.4.16",
     "bcryptjs": "^2.4.3",
+    "critters": "^0.0.23",
     "date-fns": "^2.30.0",
     "googleapis": "^128.0.0",
     "jsonwebtoken": "^9.0.2",
