fix: Ajout de la configuration webpack pour résoudre les alias @/ - Correction des erreurs de résolution de modules pour le déploiement Render

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "deploy:render": "./scripts/render-deploy.sh",
     "check:env": "./scripts/check-production-env.sh",
     "setup:prod": "./scripts/setup-production.sh",
+    "deploy:status": "./scripts/deploy-status.sh",
     "postinstall": "npx prisma generate"
   },
   "dependencies": {
